--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ nav a{
 
 }
 
-nav a::after{
+nav .nav::after{
   position: absolute;
   content: '';
   bottom: -2px;
@@ -18,6 +18,6 @@ nav a::after{
   transition: 0.5s;
 }
 
-nav a:hover::after{
+nav .nav:hover::after{
   width: 100%;
 }
